# PatClion

./: .gitignore  CMakeLists.txt  README.MD
SETS_15/: CMakeLists.txt  xt_6_1.c  xt_6_10.c  xt_6_11.c  xt_6_12.c  xt_6_1_copy.c  xt_6_2.c  xt_6_3.c  xt_6_4.c  xt_6_5.c  xt_6_5_copy.c  xt_6_6.c  xt_6_7.c  xt_6_7_copy.c  xt_6_8.c  xt_6_9.c  xt_6_9_new.c
data_structure_book/: CMakeLists.txt  sample1_7.c
high_ladder_game/: CMakeLists.txt  hl_l1_006.c  hl_l1_011.c  hl_l1_034.c  hl_l1_047.c  hl_l1_056.c  hl_l1_070.c
other/: CMakeLists.txt  other3_2_2.c  other3_2_3.c  other_2_2_1.c  other_2_2_3.c  other_2_2_4.c  other_2_2_4_new.c  other_2_3_3.c  other_3_3_1.c
pat_basic_level_practice/: CMakeLists.txt  prime.c  prime.h  xt_1001.c  xt_1002.c  xt_1002_new.c  xt_1003.c  xt_1003_new.c  xt_1008.c  xt_1008_new.c  xt_1015.c  xt_1015_new.c  xt_1020.c  xt_1020_new.c  xt_1028.c  xt_1028_new.c  xt_1059.c
pat_level_pratice/: CMakeLists.txt
pat_level_pratice/bronze_1/: CMakeLists.txt  bronze_1_1.c  bronze_1_2.c  bronze_1_3.c  bronze_1_4.c  bronze_1_5.c
pat_level_pratice/bronze_2/: CMakeLists.txt  bronze_2_1.c  bronze_2_2.c  bronze_2_3.c  bronze_2_4.c  bronze_2_5.c
pat_level_pratice/gold_1/: CMakeLists.txt  gold_1_1.c  gold_1_2.c  gold_1_3.c  gold_1_4.c  gold_1_5.c
pat_level_pratice/gold_2/: CMakeLists.txt  gold_2_1.c  gold_2_2.c  gold_2_3.c  gold_2_4.c  gold_2_5.c  gold_2_6.c
pat_level_pratice/silver_1/: CMakeLists.txt  silver_1_1.c  silver_1_2.c  silver_1_3.c  silver_1_4.c  silver_1_5.c  silver_1_6.c
pat_level_pratice/silver_2/: CMakeLists.txt  silver_2_1.c  silver_2_2.c  silver_2_3.c  silver_2_4.c  silver_2_5.c  silver_2_6.c
pta2020_2021/: CMakeLists.txt  t7_1.c  t7_2.c  t7_3.c  t7_4.c
sets12/: 7_5_xt_new.c  CMakeLists.txt  P4_11_2.c  README.MD  p10_2.c  p10_4.c  p10_5.c  p10_6.c  p10_7.c  p11_2.c  p11_7.c  p11_7_2.c  p11_8.c  p4_11_1.c  temp.c
sets12_1/: 10_1_lx.c  10_1_xt.c  10_3_xt.c  10_4_xt.c  2_10_lx.c  2_11_lx.c  2_12_lx.c  2_13_lx.c  2_14_lx.c  2_15_lx.c  2_17_lx.c  2_18_lx.c  2_1_lx.c  2_1_xt.c  2_2_xt.c  2_3_lx.c  2_3_xt.c  2_4_lx.c  2_4_xt.c  2_5_xt.c  2_6_lx.c  2_6_xt.c  2_8_lx.c  2_9_lx.c  3_1_xt.c  3_2_lx.c  3_2_xt.c  3_3_lx.c  3_3_xt.c  3_4_lx.c  3_4_xt.c  3_5_lx.c  3_5_xt.c  3_7_lx.c  3_8_lx.c  4_10_lx.c  4_10_xt.c  4_11_lx.c  4_1_xt.c  4_2_xt.c  (+63 more)
sets13/: CMakeLists.txt  sy_10_10.c  sy_10_4.c  sy_10_5.c  sy_10_6.c  sy_10_7.c  sy_10_8.c  sy_10_9.c  sy_11_1_2.c  sy_11_1_3.c  sy_11_1_6.c  sy_11_1_8.c  sy_11_2_1.c  sy_11_2_2.c  sy_11_2_3.c  sy_11_2_4.c  sy_11_2_5.c  sy_11_2_6.c  sy_11_2_7.c  sy_11_2_8.c  sy_11_2_9.c  sy_5_10.c  sy_6_5.c  sy_6_7.c  sy_7_1_11.c  sy_7_3_6.c  sy_8_1_1.c  sy_8_1_3.c  sy_8_1_4.c  sy_8_1_5.c  sy_8_1_6.c  sy_8_1_7.c  sy_8_1_8.c  sy_8_2_3.c  sy_8_2_4.c  sy_8_2_5.c  sy_8_2_6.c  sy_8_2_7.c  sy_8_2_9.c
sets14/: CMakeLists.txt  xt_7_29.c  xt_7_34.c
sets15/: CMakeLists.txt  xt_6_2.c  xt_6_4.c
sets17/: CMakeLists.txt  xt17_1.c  xt17_1_copy.c  xt_17_3.c  xt_17_3_copy.c  xt_17_4.c
sets_434/: CMakeLists.txt  sl1_1.c  xt1_8.c  xt1_9.c  xt1_9_copy.c  xt2_2.c  xt2_2_1.c  xt2_3.c  xt2_4.c  xt2_5.c  xt2_6.c  xt2_7.c  xt2_8.c  xt3_3.c  xt3_4.c  xt3_5.c  xt_3_12.c  xt_3_13.c  xt_3_13_copy.c  xt_3_14.c  xt_4_3.c
temp/: CMakeLists.txt  Maze.c  temp.c
