#数据结构与算法题目集（中文）
set(CMAKE_C_STANDARD 99)
#设置当前的路径
set(MY_PATH ${CMAKE_CURRENT_LIST_DIR})

add_executable(P6_1 ${MY_PATH}/xt_6_1.c)
add_executable(P6_2 ${MY_PATH}/xt_6_2.c)
add_executable(P6_3 ${MY_PATH}/xt_6_3.c)
add_executable(P6_4 ${MY_PATH}/xt_6_4.c)
add_executable(P6_5 ${MY_PATH}/xt_6_5.c)
add_executable(P6_6 ${MY_PATH}/xt_6_6.c)
add_executable(P6_7 ${MY_PATH}/xt_6_7.c)

add_executable(P6_1_copy ${MY_PATH}/xt_6_1_copy.c)
add_executable(P6_5_copy ${MY_PATH}/xt_6_5_copy.c)
add_executable(P6_7_copy ${MY_PATH}/xt_6_7_copy.c)

add_executable(P6_8 ${MY_PATH}/xt_6_8.c)
add_executable(P6_9 ${MY_PATH}/xt_6_9.c)
add_executable(P6_10 ${MY_PATH}/xt_6_10.c)