#数据结构与算法题目集（中文）
set(CMAKE_C_STANDARD 99)
#设置当前的路径
set(MY_PATH ${CMAKE_CURRENT_LIST_DIR})

add_executable(P6_1 xt_6_1.c)
add_executable(P6_2 xt_6_2.c)
add_executable(P6_3 xt_6_3.c)
add_executable(P6_4 xt_6_4.c)
add_executable(P6_5 xt_6_5.c)
add_executable(P6_6 xt_6_6.c)
add_executable(P6_7 xt_6_7.c)

add_executable(P6_1_copy xt_6_1_copy.c)
add_executable(P6_5_copy xt_6_5_copy.c)
add_executable(P6_7_copy xt_6_7_copy.c)

add_executable(P6_8 xt_6_8.c)
add_executable(P6_9 xt_6_9.c)
add_executable(P6_9_new xt_6_9_new.c)
add_executable(P6_10 xt_6_10.c)
add_executable(P6_11 xt_6_11.c)
add_executable(P6_12 xt_6_12.c)