#https://pintia.cn/problem-sets/988034414048743424/problems/type/6
add_executable(other3_2_2 other3_2_2.c)
add_executable(other3_2_3 other3_2_3.c)

add_executable(other_2_2_1.c other_2_2_1.c)
add_executable(other_2_2_3 other_2_2_3.c)
add_executable(other_2_2_4 other_2_2_4.c)
add_executable(other_2_2_4_new other_2_2_4_new.c)
add_executable(other_2_3_3.c other_2_3_3.c)
add_executable(other_3_3_1.c other_3_3_1.c)
