#PAT (Basic Level) Practice （中文）
#https://pintia.cn/problem-sets/994805260223102976/problems/type/7
add_executable(xt_1001.c xt_1001)
add_executable(xt_1002.c xt_1002)
add_executable(xt_1002_new xt_1002_new.c)

add_executable(xt_1003.c xt_1003)
add_executable(xt_1003_new.c xt_1003_new.c)
add_executable(xt_1008.c xt_1008.c)
add_executable(xt_1008_new.c xt_1008_new.c)
add_executable(xt_1015.c xt_1015.c)
add_executable(xt_1015_new.c xt_1015_new.c)
