#浙大版《C语言程序设计（第3版）》题目集
cmake_minimum_required(VERSION 3.16)
set(CMAKE_C_STANDARD 99)
#设置当前的路径
set(MY_PATH ${CMAKE_CURRENT_LIST_DIR})

if (false)
    add_executable(2_10_lx ${MY_PATH}/2_10_lx.c)
    add_executable(2_11_lx ${MY_PATH}/2_11_lx.c)
    add_executable(2_12_lx ${MY_PATH}/2_12_lx.c)
    add_executable(2_13_lx ${MY_PATH}/2_13_lx.c)
    add_executable(2_14_lx ${MY_PATH}/2_14_lx.c)
    add_executable(2_15_lx ${MY_PATH}/2_15_lx.c)
    add_executable(2_17_lx ${MY_PATH}/2_17_lx.c)
    add_executable(2_18_lx ${MY_PATH}/2_18_lx.c)
    add_executable(2_1_lx ${MY_PATH}/2_1_lx.c)
    add_executable(2_1_xt ${MY_PATH}/2_1_xt.c)
    add_executable(2_2_xt ${MY_PATH}/2_2_xt.c)
    add_executable(2_3_lx ${MY_PATH}/2_3_lx.c)
    add_executable(2_3_xt ${MY_PATH}/2_3_xt.c)
    add_executable(2_4_lx ${MY_PATH}/2_4_lx.c)
    add_executable(2_4_xt ${MY_PATH}/2_4_xt.c)
    add_executable(2_5_xt ${MY_PATH}/2_5_xt.c)
    add_executable(2_6_lx ${MY_PATH}/2_6_lx.c)
    add_executable(2_6_xt ${MY_PATH}/2_6_xt.c)
    add_executable(2_8_lx ${MY_PATH}/2_8_lx.c)
    add_executable(2_9_lx ${MY_PATH}/2_9_lx.c)
endif ()

if (false)
    add_executable(3_1_xt ${MY_PATH}/3_1_xt.c)
    add_executable(3_2_lx ${MY_PATH}/3_2_lx.c)
    add_executable(3_2_xt ${MY_PATH}/3_2_xt.c)
    add_executable(3_3_lx ${MY_PATH}/3_3_lx.c)
    add_executable(3_3_xt ${MY_PATH}/3_3_xt.c)
    add_executable(3_4_lx ${MY_PATH}/3_4_lx.c)
    add_executable(3_4_xt ${MY_PATH}/3_4_xt.c)
    add_executable(3_5_lx ${MY_PATH}/3_5_lx.c)
    add_executable(3_5_xt ${MY_PATH}/3_5_xt.c)
    add_executable(3_7_lx ${MY_PATH}/3_7_lx.c)
    add_executable(3_8_lx ${MY_PATH}/3_8_lx.c)
endif ()

if (false)
    add_executable(4_10_lx ${MY_PATH}/4_10_lx.c)
    add_executable(4_10_xt ${MY_PATH}/4_10_xt.c)
    add_executable(4_11_lx ${MY_PATH}/4_11_lx.c)
    add_executable(4_1_xt ${MY_PATH}/4_1_xt.c)
    add_executable(4_2_xt ${MY_PATH}/4_2_xt.c)
    add_executable(4_3_lx ${MY_PATH}/4_3_lx.c)
    add_executable(4_3_xt ${MY_PATH}/4_3_xt.c)
    add_executable(4_4_xt ${MY_PATH}/4_4_xt.c)
    add_executable(4_5_xt ${MY_PATH}/4_5_xt.c)
    add_executable(4_6_lx ${MY_PATH}/4_6_lx.c)
    add_executable(4_6_xt ${MY_PATH}/4_6_xt.c)
    add_executable(4_7_lx ${MY_PATH}/4_7_lx.c)
    add_executable(4_7_xt ${MY_PATH}/4_7_xt.c)
    add_executable(4_8_xt ${MY_PATH}/4_8_xt.c)
    add_executable(4_9_xt ${MY_PATH}/4_9_xt.c)
endif ()

if (false)
    add_executable(5_1_lx ${MY_PATH}/5_1_lx.c)
    add_executable(5_1_xt ${MY_PATH}/5_1_xt.c)
    add_executable(5_2_lx ${MY_PATH}/5_2_lx.c)
    add_executable(5_2_xt ${MY_PATH}/5_2_xt.c)
    add_executable(5_3_lx ${MY_PATH}/5_3_lx.c)
    add_executable(5_3_xt ${MY_PATH}/5_3_xt.c)
    add_executable(5_4_xt ${MY_PATH}/5_4_xt.c)
    add_executable(5_5_xt ${MY_PATH}/5_5_xt.c)
    add_executable(5_6_xt ${MY_PATH}/5_6_xt.c)
    add_executable(5_7_xt ${MY_PATH}/5_7_xt.c)
endif ()

if (false)
    add_executable(6_1_xt ${MY_PATH}/6_1_xt.c)
    add_executable(6_2_xt ${MY_PATH}/6_2_xt.c)
    add_executable(6_3_xt ${MY_PATH}/6_3_xt.c)
    add_executable(6_4_xt ${MY_PATH}/6_4_xt.c)
    add_executable(6_5_xt ${MY_PATH}/6_5_xt.c)
    add_executable(6_6_xt ${MY_PATH}/6_6_xt.c)
    add_executable(6_7_xt ${MY_PATH}/6_7_xt.c)
    add_executable(6_8_xt ${MY_PATH}/6_8_xt.c)
endif ()

if (false)
    add_executable(7_10_lx ${MY_PATH}/7_10_lx.c)
    add_executable(7_11_lx ${MY_PATH}/7_11_lx.c)
    add_executable(7_1_xt ${MY_PATH}/7_1_xt.c)
    add_executable(7_2_lx ${MY_PATH}/7_2_lx.c)
    add_executable(7_2_xt ${MY_PATH}/7_2_xt.c)
    add_executable(7_3_lx ${MY_PATH}/7_3_lx.c)
    add_executable(7_3_xt ${MY_PATH}/7_3_xt.c)
    add_executable(7_4_lx ${MY_PATH}/7_4_lx.c)
    add_executable(7_4_xt ${MY_PATH}/7_4_xt.c)
    add_executable(7_5_xt ${MY_PATH}/7_5_xt.c)
    add_executable(7_6_xt ${MY_PATH}/7_6_xt.c)
    add_executable(7_7_lx ${MY_PATH}/7_7_lx.c)
    add_executable(7_7_xt ${MY_PATH}/7_7_xt.c)
    add_executable(7_8_lx ${MY_PATH}/7_8_lx.c)
    add_executable(7_8_xt ${MY_PATH}/7_8_xt.c)
    add_executable(7_9_lx ${MY_PATH}/7_9_lx.c)
endif ()

if (false)
    add_executable(8_1_xt ${MY_PATH}/8_1_xt.c)
    add_executable(8_2_lx ${MY_PATH}/8_2_lx.c)
    add_executable(8_2_xt ${MY_PATH}/8_2_xt.c)
    add_executable(8_3_xt ${MY_PATH}/8_3_xt.c)
    add_executable(8_4_xt ${MY_PATH}/8_4_xt.c)
    add_executable(8_5_xt ${MY_PATH}/8_5_xt.c)
    add_executable(8_6_xt ${MY_PATH}/8_6_xt.c)
    add_executable(8_7_xt ${MY_PATH}/8_7_xt.c)
    add_executable(8_8_lx ${MY_PATH}/8_8_lx.c)
    add_executable(8_8_xt ${MY_PATH}/8_8_xt.c)
    add_executable(8_9_xt ${MY_PATH}/8_9_xt.c)
    add_executable(9_2_xt ${MY_PATH}/9_2_xt.c)
    add_executable(9_6_xt ${MY_PATH}/9_6_xt.c)
endif ()

if (false)
    add_executable(10_1_lx ${MY_PATH}/10_1_lx.c)
    add_executable(10_1_xt ${MY_PATH}/10_1_xt.c)
    add_executable(10_2_xt ${MY_PATH}/10_2_xt.c)
    add_executable(10_3_xt ${MY_PATH}/10_3_xt.c)
    add_executable(10_4_xt ${MY_PATH}/10_4_xt.c)
    add_executable(11_2_xt ${MY_PATH}/11_2_xt.c)
endif ()

add_executable(5_7_xt ${MY_PATH}/5_7_xt.c)
add_executable(9_5_xt ${MY_PATH}/9_5_xt.c)