#浙大版《C语言程序设计（第3版）》题目集
set(CMAKE_C_STANDARD 99)
#设置当前的路径
set(MY_PATH ${CMAKE_CURRENT_LIST_DIR})

if (false)
    add_executable(2_10_lx 2_10_lx.c)
    add_executable(2_11_lx 2_11_lx.c)
    add_executable(2_12_lx 2_12_lx.c)
    add_executable(2_13_lx 2_13_lx.c)
    add_executable(2_14_lx 2_14_lx.c)
    add_executable(2_15_lx 2_15_lx.c)
    add_executable(2_17_lx 2_17_lx.c)
    add_executable(2_18_lx 2_18_lx.c)
    add_executable(2_1_lx 2_1_lx.c)
    add_executable(2_1_xt 2_1_xt.c)
    add_executable(2_2_xt 2_2_xt.c)
    add_executable(2_3_lx 2_3_lx.c)
    add_executable(2_3_xt 2_3_xt.c)
    add_executable(2_4_lx 2_4_lx.c)
    add_executable(2_4_xt 2_4_xt.c)
    add_executable(2_5_xt 2_5_xt.c)
    add_executable(2_6_lx 2_6_lx.c)
    add_executable(2_6_xt 2_6_xt.c)
    add_executable(2_8_lx 2_8_lx.c)
    add_executable(2_9_lx 2_9_lx.c)
endif ()

if (false)
    add_executable(3_1_xt 3_1_xt.c)
    add_executable(3_2_lx 3_2_lx.c)
    add_executable(3_2_xt 3_2_xt.c)
    add_executable(3_3_lx 3_3_lx.c)
    add_executable(3_3_xt 3_3_xt.c)
    add_executable(3_4_lx 3_4_lx.c)
    add_executable(3_4_xt 3_4_xt.c)
    add_executable(3_5_lx 3_5_lx.c)
    add_executable(3_5_xt 3_5_xt.c)
    add_executable(3_7_lx 3_7_lx.c)
    add_executable(3_8_lx 3_8_lx.c)
endif ()

if (false)
    add_executable(4_10_lx 4_10_lx.c)
    add_executable(4_10_xt 4_10_xt.c)
    add_executable(4_11_lx 4_11_lx.c)
    add_executable(4_1_xt 4_1_xt.c)
    add_executable(4_2_xt 4_2_xt.c)
    add_executable(4_3_lx 4_3_lx.c)
    add_executable(4_3_xt 4_3_xt.c)
    add_executable(4_4_xt 4_4_xt.c)
    add_executable(4_5_xt 4_5_xt.c)
    add_executable(4_6_lx 4_6_lx.c)
    add_executable(4_6_xt 4_6_xt.c)
    add_executable(4_7_lx 4_7_lx.c)
    add_executable(4_7_xt 4_7_xt.c)
    add_executable(4_8_xt 4_8_xt.c)
    add_executable(4_9_xt 4_9_xt.c)
endif ()

if (false)
    add_executable(5_1_lx 5_1_lx.c)
    add_executable(5_1_xt 5_1_xt.c)
    add_executable(5_2_lx 5_2_lx.c)
    add_executable(5_2_xt 5_2_xt.c)
    add_executable(5_3_lx 5_3_lx.c)
    add_executable(5_3_xt 5_3_xt.c)
    add_executable(5_4_xt 5_4_xt.c)
    add_executable(5_5_xt 5_5_xt.c)
    add_executable(5_6_xt 5_6_xt.c)
    add_executable(5_7_xt 5_7_xt.c)
endif ()

if (false)
    add_executable(6_1_xt 6_1_xt.c)
    add_executable(6_2_xt 6_2_xt.c)
    add_executable(6_3_xt 6_3_xt.c)
    add_executable(6_4_xt 6_4_xt.c)
    add_executable(6_5_xt 6_5_xt.c)
    add_executable(6_6_xt 6_6_xt.c)
    add_executable(6_7_xt 6_7_xt.c)
    add_executable(6_8_xt 6_8_xt.c)
endif ()

if (false)
    add_executable(7_10_lx 7_10_lx.c)
    add_executable(7_11_lx 7_11_lx.c)
    add_executable(7_1_xt 7_1_xt.c)
    add_executable(7_2_lx 7_2_lx.c)
    add_executable(7_2_xt 7_2_xt.c)
    add_executable(7_3_lx 7_3_lx.c)
    add_executable(7_3_xt 7_3_xt.c)
    add_executable(7_4_lx 7_4_lx.c)
    add_executable(7_4_xt 7_4_xt.c)
    add_executable(7_5_xt 7_5_xt.c)
    add_executable(7_6_xt 7_6_xt.c)
    add_executable(7_7_lx 7_7_lx.c)
    add_executable(7_7_xt 7_7_xt.c)
    add_executable(7_8_lx 7_8_lx.c)
    add_executable(7_8_xt 7_8_xt.c)
    add_executable(7_9_lx 7_9_lx.c)
endif ()

if (false)
    add_executable(8_1_xt 8_1_xt.c)
    add_executable(8_2_lx 8_2_lx.c)
    add_executable(8_2_xt 8_2_xt.c)
    add_executable(8_3_xt 8_3_xt.c)
    add_executable(8_4_xt 8_4_xt.c)
    add_executable(8_5_xt 8_5_xt.c)
    add_executable(8_6_xt 8_6_xt.c)
    add_executable(8_7_xt 8_7_xt.c)
    add_executable(8_8_lx 8_8_lx.c)
    add_executable(8_8_xt 8_8_xt.c)
    add_executable(8_9_xt 8_9_xt.c)
    add_executable(9_2_xt 9_2_xt.c)
    add_executable(9_6_xt 9_6_xt.c)
endif ()

if (false)
    add_executable(10_1_lx 10_1_lx.c)
    add_executable(10_1_xt 10_1_xt.c)
    add_executable(10_2_xt 10_2_xt.c)
    add_executable(10_3_xt 10_3_xt.c)
    add_executable(10_4_xt 10_4_xt.c)
    add_executable(11_2_xt 11_2_xt.c)
endif ()

add_executable(5_7_xt 5_7_xt.c)
add_executable(9_5_xt 9_5_xt.c)
add_executable(9_5_xt_new 9_5_xt_new.c)
add_executable(9_4.c 9_4.c)