#PAT基础级-白银段位样卷1
#https://pintia.cn/problem-sets/1146682252642181120
add_executable(silver_1_1.c silver_1_1.c)
add_executable(silver_1_2.c silver_1_2.c)
add_executable(silver_1_3.c silver_1_3.c)
add_executable(silver_1_4.c silver_1_4.c)
add_executable(silver_1_5.c silver_1_5.c)
add_executable(silver_1_6.c silver_1_6.c)