#PAT基础级-白银段位样卷2
#https://pintia.cn/problem-sets/1146682475225505792
add_executable(silver_2_1.c silver_2_1.c)
add_executable(silver_2_2.c silver_2_2.c)
add_executable(silver_2_3.c silver_2_3.c)
add_executable(silver_2_4.c silver_2_4.c)
add_executable(silver_2_5.c silver_2_5.c)
add_executable(silver_2_6.c silver_2_6.c)